# bosch-applied-cv-assignment

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: Task2_Model_Training.ipynb  Task3_Evaluation.ipynb
src/: config.py
src/analysis/: __init__.py  category_statistics.py  dataset_analyzer.py  scene_statistics.py
src/app/: Hello.py  Process_Dataset.py
src/app/pages/: 1_Initial_Observations.py  1_Preliminary_Thoughts.py  2_Precomputed_Dataset_Analysis.py  2_Task_1A_-_Scene_Statistics.py  3_Run_The_Analysis_Yourself.py  3_Task_1B_-_Class_Distribution_Analysis.py  4_Task_1C_-_Anomaly_Identification.py  5_Task_1D_-_Train_Class_Statistics_Visualizer.py  6_Task_2_-_Model_Selection_and_Training.py  7_Task_3_-_Model_Evaluation.py
src/app/precomputed/: label.json  outer_structure.json
src/dataset_analyzer/: dataset_analyzer.py
