[project]
name = "bosch-applied-cv-assignment"
version = "0.1.0"
description = "BDD100K dataset analysis, object detection model training, and model evaluation pipeline for the Bosch Applied Computer Vision assignment (Anik Ghosh)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ijson>=3.4.0.post0",
    "interrogate>=1.7.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "ruff>=0.15.0",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]
